# UnitTest-cpp-template

./: CMakeLists.txt
cmake.modules/: FindCppcheck.cmake  Findcppcheck.cpp
inc/: Apple.h  Something.h
src/Apple/: Apple.cpp  CMakeLists.txt
src/Something/: CMakeLists.txt  Something.cpp
src/Tests/TestExec/: CMakeLists.txt  Test.cpp
src/Tests/Tests/: Test_Apple.cpp  Test_Something.cpp
src/app/: CMakeLists.txt
